Thu Jul 16 15:00:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rb_random_t): objectified.  [EXPERIMENTAL]
	  [ruby-dev:30954]

Thu Jul 16 14:08:44 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_sample): RDoc update.  a patch from Florian
	  Frank.   [ruby-core:24347]

Thu Jul 16 12:42:10 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_readline): rl_free_line_state
	  before rl_cleanup_after_signal.

	* ext/readline/readline.c (Init_readline): set rl_catch_signals and
	  rl_catch_signwinch as 0. [ruby-core:21884]

Thu Jul 16 08:59:22 2009  Koichi Sasada  <ko1@atdot.net>

	* node.h, vm_core.h, variable.c: rename global_entry to rb_global_entry.

	* compile.c, insns.def, iseq.c, vm_insnhelper.h: ditto.

Thu Jul 16 08:57:44 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c: separate clearing cache entry code.

Thu Jul 16 08:56:32 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): re-fix GC problem.

Thu Jul 16 08:55:27 2009  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add method.h.

Thu Jul 16 08:53:26 2009  Koichi Sasada  <ko1@atdot.net>

	* io.c (argf_free): free data body.

Wed Jul 15 23:46:55 2009  Koichi Sasada  <ko1@atdot.net>

	* method.h, vm_core.h: add rb_method_entry_t.  Remove nodes around
	  method management.  This change affect some VM control stack structure.

	* vm.c, vm_insnhelper.c, vm_method.c, vm_eval.c: ditto.  and make some
	  refactoring.

	* insns.def, class.c, eval.c, proc.c, vm_dump.c : ditto.

	* vm_core.h, compile.c (iseq_specialized_instruction): remove
	  VM_CALL_SEND_BIT.  use another optimization tech for Kernel#send.

	* node.h: remove unused node types.

	* ext/objspace/objspace.c (count_nodes): ditto.

	* gc.c: add mark/free functions for method entry.

	* include/ruby/intern.h: remove decl of
	  rb_define_notimplement_method_id().  nobody can use it
	  because noex is not opend.

	* iseq.c (iseq_mark): fix to check ic_method is available.
